update spec file
git-svn-id: file:///srv/svn/publican/trunk@310 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -160,6 +160,7 @@ rm -rf $RPM_BUILD_ROOT
 - Banned inlinegraphic. BZ #448331
 - Added Article and Set Templates
 - Banned xreflabel and endterm. BZ #452051
+- Generate FOP config file and font-metricfiles as build. BX #451913
 
 * Mon Apr 7 2008 Jeff Fearn <jfearn@redhat.com> 0.33-0
 - Remove release from package name in html desktop spec file
