tweak set templates
git-svn-id: file:///srv/svn/publican/trunk@321 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/Set_Template/Makefile
+++ b/publican-redhat/Set_Template/Makefile
@@ -6,9 +6,10 @@ DOCNAME		= MYBOOK
 BRAND		= RedHat
 DOC_TYPE	= Set
 
+# Uncomment below 3 lines for a Distributed Set
 #BOOKS		= My_Other_Book His_Book Her_Book Their_Book
 #SET_REPO	= http://svn.repo.com/repos/project
-SET_REPO_TYPE	= SVN
+#SET_REPO_TYPE	= SVN
 
 #OTHER_LANGS	= as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
 
@@ -18,6 +19,7 @@ SET_REPO_TYPE	= SVN
 COMMON_CONFIG  = /usr/share/publican
 include $(COMMON_CONFIG)/make/Makefile.common
 
-pre:: get_books set_books
-clean:: clean_set_books
+# Uncomment below 2 lines for a Distributed Set
+#pre:: get_books set_books
+#clean:: clean_set_books
 
