Fixed spaces being removed between inline tags. BZ #453067
git-svn-id: file:///srv/svn/publican/trunk@331 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -6,7 +6,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing Documentation
 Version:	0.33
-Release:	0.t225%{?dist}
+Release:	0.t226%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -167,6 +167,7 @@ rm -rf $RPM_BUILD_ROOT
 - Changed HTML and PDF common brand to more pleasing colors. BZ #442675 
 - Fixed incorrect PDF colours on Fedora and Common brands. BZ #442988
 - Fixed PDF TOC missing Chapter numbers on Sections. BZ #452802
+- Fixed spaces being removed between inline tags. BZ #453067
 
 * Mon Apr 7 2008 Jeff Fearn <jfearn@redhat.com> 0.33-0
 - Remove release from package name in html desktop spec file
