looks like we get a proper place for release files
git-svn-id: file:///srv/svn/publican/trunk@333 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Makefile
+++ b/publican/Makefile
@@ -79,6 +79,8 @@ dist: clean
 	@tar --atime-preserve -czf $(TAR_NAME).tgz $(TAR_NAME)
 	@echo "End $@"
 
+upload-dist: dist
+	@scp $(TAR_NAME).tgz fedorahosted.org:publican
 
 # This is required to avoid this package depending on itself to build it's docs
 MYPATH = $(shell echo $$PATH)
