--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -14,7 +14,7 @@ License:	GPLv2+ and GFDL
 Group:		Applications/Text
 Buildroot:	%{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 Buildarch:	noarch
-Source:		http://svn.fedorahosted.org/svn/publican/trunk/Files/%{name}-%{version}.tgz
+Source:		https://fedorahosted.org/releases/p/u/publican/%{name}-%{version}.tgz
 # need kdesdk for po2xml & xml2pot
 Requires:	gettext libxslt perl(XML::TreeBuilder) docbook-style-xsl elinks aspell
 Requires:	%{_bindir}/xml2pot %{_bindir}/po2xml
