use fedora hosted website to host tar files
git-svn-id: file:///srv/svn/publican/trunk@334 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-gimp/Makefile
+++ b/publican-gimp/Makefile
@@ -43,6 +43,9 @@ dist: clean
 	@tar czf $(TAR_NAME).tgz $(TAR_NAME)
 	@echo "End $@"
 
+upload-dist: dist
+	@scp $(TAR_NAME).tgz fedorahosted.org:publican
+
 clean:
 	@echo "Start $@"
 	@rm -rf $(NAME)-* *.tgz Common_Content tmp
