- Changed TOC layout (bold chapters + spacing). BZ #453885 - Changed title spacing, unbolded figure/table titles.
git-svn-id: file:///srv/svn/publican/trunk@336 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/docs/Makefile
+++ b/publican/content/docs/Makefile
@@ -37,13 +37,13 @@ update-template:
 	@cp ../../Book_Template/en-US/Book.ent en-US/extras/Book_Name.ent
 	@echo "End $@"
 
-publish-dist: html-single-all
+publish-dist: html-desktop-all
 	@echo "Start $@"
 	@rm -rf publish
 	@mkdir -p publish
 	@for lang in $(TRANSLATIONS); do \
 		mkdir -p publish/$$lang; \
-		cp -rf tmp/$$lang/html-single/*  publish/$$lang/.; \
+		cp -rf tmp/$$lang/html-desktop/*  publish/$$lang/.; \
 	done
 	@echo "End $@"
 
