--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -429,6 +429,10 @@ help_params::
 	@echo
 	@echo "XML_LANG: source language of xml. Currently: $(XML_LANG)"
 	@echo
+	@echo "XALAN_TEST: test xalan for xslt. Currently: $(XML_LANG)"
+	@echo
+	@echo "XALAN: Comman line to use when testing XALAN. It's big"
+	@echo
 
 help_internals::
 	@echo
