--- a/publican/make/Makefile.templates
+++ b/publican/make/Makefile.templates
@@ -407,7 +407,7 @@ endef
 
 define	TARDIR_Template
 .PHONY:	tardir-${1}
-tardir-${1}:: xml-${1}
+tardir-${1}:: xml-${1} test-${1}
 	@echo "START: tardir-${1} `date`"
 	@mkdir -p tmp/tar/$(SPEC_NAME)-${1}-$(VERSION)
 	@cp -rf tmp/${1}/xml tmp/tar/$(SPEC_NAME)-${1}-$(VERSION)/${1}
