add functionality to export po/pot files to ECS repo for translation
git-svn-id: file:///srv/svn/publican/trunk@338 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss/Makefile
+++ b/publican-jboss/Makefile
@@ -7,9 +7,7 @@ RELEASE = $(shell grep 'Release:' $(SPEC) | sed -e 's/Release:\s*\(.*\)$$/\1/g' 
 PWD		= $(shell pwd)
 RPMDIR	=  $(PWD)/tmp/rpm
 OS_VER = $(shell uname -a | sed -e 's/^.*\.\(...\)[^\.]*\#.*$$/\1/')
-ifeq "$(OS_VER)" "ELx"
-OS_VER	= "el4"
-endif
+
 TAR_NAME = $(NAME)-$(VERSION)
 LANGS = as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
 
@@ -68,7 +66,7 @@ update-pot:
 		$(ENT2POT) en-US/Translatable-Entities.ent > pot/Translatable-Entities.pot;\
 	fi
 	@pushd en-US > /dev/null; \
-		for xml_file in `find . -maxdepth 1 -name "*.xml"`; do \
+		for xml_file in `find . -maxdepth 1 -name "*.xml" | grep -v Legal_Notice`; do \
 			pot_file=`echo $$xml_file | sed -e 's/\.xml/\.pot/'`;\
 			xml2pot $$xml_file | msguniq  > ../pot/$$pot_file;\
 		done; \
@@ -76,9 +74,37 @@ update-pot:
 	@echo "End $@"
 
 # TODO: Get this in to SVN
+SOURCE	= https://svn.devel.redhat.com/repos/ecs/Software/$(NAME)
+SOFTWARE_SOURCE = http://svn.fedorahosted.org/svn
 
-#CVS_ROOT = cvs.devel.redhat.com:/cvs/ecs
-#CVS_REPO = GUI_Strings/publican-JBoss
+resync-po:: clean
+	@echo "Start $@"
+	@echo  "	Exporting PO files from $(SOURCE)/$(VERSION)"
+	@mkdir -p tmp/SVN
+	@pushd tmp/SVN  > /dev/null; \
+		svn export $(SOURCE)/$(VERSION) gui_strings; \
+	popd > /dev/null;
+	@pushd tmp/SVN/gui_strings  > /dev/null; \
+		find . -name *.po | sed -e 's/\.\///g' | xargs -i{} cp {} $(PWD)/{}; \
+	popd > /dev/null;
+	@echo "End $@"
+
+create_gui:: clean
+	@echo "Start $@"
+	mkdir -p tmp/$(VERSION)/pot
+	cp ../publican/make/Makefile.l10n tmp/$(VERSION)/Makefile
+	sed -i -e 's/@PROGNAME@/$(VERSION)/g' tmp/$(VERSION)/Makefile
+	sed -i -e 's/@BRAND@/$(REAL_BRAND)/g' tmp/$(VERSION)/Makefile
+	sed -i -e 's/@OTHER_LANGS@/$(LANGS)/g' tmp/$(VERSION)/Makefile
+	perl -p -i -e 's|\@SOFTWARE_SOURCE\@|$(SOFTWARE_SOURCE)|g' tmp/$(VERSION)/Makefile
+	make -C tmp/$(VERSION) update-po-all
+	cp pot/*.pot tmp/$(VERSION)/pot/.
+	find . -name *.po | sed -e 's/\.\///g' | xargs -i{} cp {} tmp/$(VERSION)/{}
+	make -C tmp/$(VERSION) update-po-all
+	make -C tmp/$(VERSION) clean
+	cd tmp && svn import -m"initial import of $(NAME) $(VERSION)" $(VERSION) $(SOURCE)
+	@echo "End $@" 
+
 
 #resync-po:: clean
 #	@echo "Start $@"
