--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -6,7 +6,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing Documentation
 Version:	0.33
-Release:	0.t245%{?dist}
+Release:	0.t248%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -18,7 +18,7 @@ Source:		https://fedorahosted.org/releases/p/u/publican/%{name}-%{version}.tgz
 # need kdesdk for po2xml & xml2pot
 Requires:	gettext libxslt perl(XML::TreeBuilder) docbook-style-xsl elinks aspell
 Requires:	%{_bindir}/xml2pot %{_bindir}/po2xml
-Requires:	perl-ParseLex perl-HTML-Template
+Requires:	perl-ParseLex perl-HTML-Template make
 Requires:	fop batik xalan-j2 ImageMagick
 
 BuildRequires:	gettext libxslt perl(XML::TreeBuilder) docbook-style-xsl aspell
@@ -171,6 +171,8 @@ rm -rf $RPM_BUILD_ROOT
 - Changed TOC layout (bold chapters + spacing). BZ #453885
 - Changed title spacing, unbolded figure/table titles.
 - Fix over size images breaking PDF and HTML layouts
+- Add missing make Requires. BZ #454376
+- Added call to aspell to spell check.
 
 * Mon Apr 7 2008 Jeff Fearn <jfearn@redhat.com> 0.33-0
 - Remove release from package name in html desktop spec file
