cleaning up common files
git-svn-id: file:///srv/svn/publican/trunk@345 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/Makefile
+++ b/publican-redhat/Makefile
@@ -145,4 +145,12 @@ Common_Content:: entities
 	cd $(PWD);
 	@echo "End $@"
 
+clean_ids:
+	@echo "START: $@ `date`"
+	@cd en-US && \
+	for file in `find . -name "*.xml" | sed -e 's/^\.\///' | sort`; do \
+		echo "	$$file"; \
+		xmlClean -strict 1 -U -in $$file -out $$file -book $(REAL_BRAND) -cleanids ; \
+	done && cd ..;
+	@echo "END: $@ `date`"
 
