--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -6,7 +6,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing Documentation
 Version:	0.33
-Release:	0.t249%{?dist}
+Release:	0.t250%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -174,6 +174,7 @@ rm -rf $RPM_BUILD_ROOT
 - Add missing make Requires. BZ #454376
 - Added call to aspell to spell check.
 - Fixed incorrect other credit title in PDF. BZ #454394
+- Turned on Hyphenation to split verbatim lines.
 
 * Mon Apr 7 2008 Jeff Fearn <jfearn@redhat.com> 0.33-0
 - Remove release from package name in html desktop spec file
